pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
