pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
