pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-03.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
