pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-04.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
    - name: container02
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
