pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-05.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
