pod-security/mutate/set-run-as-non-root/.kyverno-test/patched-resource-06.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        runAsNonRoot: true
